--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,59 +1,54 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Adn</title>
+  <title>Contabilidad</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'default', 'data-turbolinks-track' => true %>
   <%= stylesheet_link_tag    'default', media: 'all', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <link rel="stylesheet" href="layout.css">
 </head>
 <body>
-
 
 
 
 <div id="wrapper">
     <div id="sidebar-wrapper">
         
-        <%= image_tag("logo.png", width: "50%"); %>
+        <%= image_tag("logo.png", width: "100%"); %>
         
         <!--
         <img src="images/logo3.png" width="100%"/>
         -->
+
         <div class="container" style="width: 100%">    
         
             <div id="cssmenu" style="margin-top: 20px;">
-                <ul>
-                    <li class='has-sub'><a href='#'><i class="icon-cog"></i><span>Ventas</span></a>
+                <h3><strong>Contabilidad</strong></h3>
+                <h4></BR>Consultas</h4>
                         <ul>
-                            <li class='last'><a href='#'><span>Cuenta Corriente</span></a></li>
-                            <li class='last'><a href='#'><span>Pedidos</span></a></li>
-                            <li class='last'><a href='#'><span>Proveedor</span></a></li>
-                            <li class='last'><a href='#'><span>Configuracion</span></a></li>
+                            <li class='last'><a href='#'><span>Balance General</span></a></li>
+                            <li class='last'><a href='#'><span>Balance de Saldos</span></a></li>
+                            <li class='last'><a href='#'><span>Balance de Ventas</span></a></li>
+                            <li class='last'><a href='#'><span>Libro Mayor</span></a></li>
+                            <li class='last'><a href='#'><span>Libro Diario</span></a></li>
+                            <li class='last'><a href='#'><span>Asientos</span></a></li>
+                            <li class='last'><a href='#'><span>Cuentas Contables</span></a></li>
+                            <li class='last'><a href='#'><span>Periodo Contable</span></a></li>
                         </ul>
-                    </li>
-                </ul>
             </div>
             
             <div id="cssmenu">
-                <ul>
-                    <li><a href='#'><span>Stock</span></a></li>
-                </ul>
-            </div>
-            
-            <div id="cssmenu">
-                <ul>
-                    <li class='last'><a href='#'><span>Listar</span></a></li>
-                </ul>
-            </div>
-            
-            <div id="cssmenu">
-                <ul>
-                    <li class='has-sub'><a href='#'><span>Configuracion</span></a>
+                    <h4>Parametros</h4>
                         <ul>
-                            <li class='last'><a href='#'><span>Usuarios</span></a></li>
+                            <li class='last'><a href='#'><span>Cuenta Contable</span></a></li>
+                            <li class='last'><a href='#'><span>Parametros Contables</span></a></li>
                         </ul>
-                    </li>
+            </div>
+            
+            <div id="cssmenu">
+                <ul>
+                    <li class='has-sub'><a href='#'><span>Configuracion</span></a></li>
                 </ul>
             </div>
             
@@ -63,21 +58,86 @@
                 </ul>
             </div>
   
-        </div>
+        </div>   
+   
     </div>
     
     <div id="page-content-wrapper">
         <div id="busqueda" style="padding-top: 0px;">
-         
+         <div class="row">       
+        <div class="col-md-3">
             	<form class="navbar-form navbar-left" role="search">
 				    <input type="text" class="form-control" placeholder="Buscar">
-				
-				  <button type="submit" class="btn btn-default">Buscar</button>
+                    <a href="#" class="boton" role="button">
+                        <%= image_tag("buscar.png", width: "13%"); %>
+                    </a>
+            
+        </div>
+
+        <div class="col-md-7" style="padding-top: 6px;">
+            <div class="col-md-2">
+                <a href="#" class="boton" role="button">
+                    <%= image_tag("imprimir.png", width: "40%"); %>
+                </a>
+                </a>
+                <a href="#" class="boton" role="button">
+                    <%= image_tag("insertar.png", width: "40%"); %>
+                </a>
+            </div>
+
+            <div class="col-md-2">
+                <a href="#" class="boton" role="button">
+                    <%= image_tag("anterior.png", width: "40%"); %>
+                </a>
+                <a href="#" class="boton" role="button">
+                    <%= image_tag("siguiente.png", width: "40%"); %>
+                </a>
+            </div>
+
+
+            <div class="col-md-3">
+                </a><a href="#" class="boton" role="button">
+                    <%= image_tag("seleccionar.png", width: "22%"); %>
+                </a><a href="#" class="boton" role="button">
+                    <%= image_tag("copiar.png", width: "22%"); %>
+                </a><a href="#" class="boton" role="button">
+                    <%= image_tag("cortar.png", width: "22%"); %>
+                </a><a href="#" class="boton" role="button">
+                    <%= image_tag("pegar.png", width: "22%"); %>
+                </a>
+            </div>
+
+            
+
+            <div class="col-md-3">
+                <a href="#" class="boton" role="button">
+                    <%= image_tag("editar.png", width: "23%"); %>
+                </a>
+                <a href="#" class="boton" role="button">
+                    <%= image_tag("limpiar.png", width: "23%"); %>
+                </a>
+                <a href="#" class="boton" role="button">
+                    <%= image_tag("borrar.png", width: "23%"); %>
+                </a>
+            </div>
+
+            <div class="col-md-2">
+                <a href="#" class="boton" role="button">
+                    <%= image_tag("aceptar.png", width: "40%"); %>
+                </a>
+                <a href="#" class="boton" role="button">
+                    <%= image_tag("cancelar.png", width: "40%"); %>
+                </a>
+
+            </div>
+
+            
+        </div>
+        <div class="col-md-2">
+        </div>
+</div>
 
 				</form>
-				</br>
-				</br>
-				</br>
             
         </div>
         
