--- a/app/views/menu/index.html.erb
+++ b/app/views/menu/index.html.erb
@@ -1,3 +1,23 @@
+<!DOCTYPE html>
+<html>
+<head>
+
+</head>
+
+<body>
+
+</body>
+
 <h1>Menu#index</h1>
 <p>Find me in app/views/menu/index.html.erb</p>
 <h1> Estamos aqui </h1>
+
+
+<div class="titulo">
+
+</div>
+
+
+
+
+<html>
